updated with latest RCA build

--- a/rca_docs/site/index.html
+++ b/rca_docs/site/index.html
@@ -388,6 +388,7 @@
 
 
 <h1 id="thank-you-for-agreeing-to-play-test-red-castle-avenger">Thank You for agreeing to play test Red Castle Avenger!</h1>
+<p>Latest release: v0.2.1 (Released Thu Apr 3, 2025 at 9:00 pm)</p>
 <h3 id="dear-player">Dear Player,</h3>
 <p>I have put together this feedback system to help <strong>Red Castle Avenger</strong> (RCA) be the best I can make it. You are a critical part of that process. If you thought this was the best game you have ever played (unlikely...) I want to hear about it. If you thought this was hot steaming garbage, I ALSO want to hear about it!</p>
 <h3 id="the-ask-from-you-is-as-follows">The ask from you is as follows:</h3>
@@ -423,12 +424,12 @@
 <li>Move down: ↓</li>
 <li>Move Left: ←</li>
 <li>Move Right: →</li>
-<li>Use Item in Left hand: N</li>
-<li>Use Item in Right hand: M</li>
-<li>Inventory cursor up: I</li>
-<li>Inventory cursor down: K</li>
-<li>Inventory cursor left: J</li>
-<li>Inventory cursor right: L</li>
+<li>Use Item in Left hand: C</li>
+<li>Use Item in Right hand: V</li>
+<li>Inventory cursor up: W</li>
+<li>Inventory cursor down: S</li>
+<li>Inventory cursor left: A</li>
+<li>Inventory cursor right: D</li>
 </ul>
 
 
