--- a/rca_docs/site/404.html
+++ b/rca_docs/site/404.html
@@ -198,7 +198,7 @@
   
   
   <span class="md-ellipsis">
-    Thank You your interest in play testing Red Castle Avenger!
+    Thank You for your interest in play testing Red Castle Avenger!
     
   </span>
   
