added latest publication to CV

--- a/resume/site/index.html
+++ b/resume/site/index.html
@@ -678,7 +678,7 @@
 
 <ul>
 <li>
-<p>Cassandra J. Guffey, Mark E. Redd, Neil F. Giles, Thomas A. Knotts IV, W. Vincent Wilding, <em>Radical Isomerization and Volatility Considerations for Improved Autoignition Temperature Prediction</em> (under review)</p>
+<p>Cassandra J. Guffey, Mark E. Redd, Neil F. Giles, Thomas A. Knotts, W. Vincent Wilding, <em>Radical isomerization and volatility considerations for improved autoignition temperature prediction</em>, Fuel <strong>2025</strong> 393,135016. <a href="https://doi.org/10.1016/j.fuel.2025.135016">DOI: 10.1016/j.fuel.2025.135016</a></p>
 </li>
 <li>
 <p>Mark E. Redd, Cassandra J. Guffey, Ethan L. Gustafson, Elizabeth H. Hart, Keturah S. McQuade, Neil F. Giles, Thomas A. Knotts IV, W. Vincent Wilding,
